revisi sebagian bagian jarak elemen sama ukuran font

--- a/fields/detail-field.html
+++ b/fields/detail-field.html
@@ -123,34 +123,34 @@
       <div class="h-full px-3 pb-4 overflow-y-auto bg-white">
          <ul class="space-y-2 font-medium">
             <li>
-               <a href="#" class="flex items-center p-2 text-black rounded-lg hover:bg-red-700 hover:text-white group">
+               <a href="/dashboard/dashboard.html" class="flex items-center p-2 text-black rounded-lg hover:bg-red-700 hover:text-white group">
                   <i class="fi fi-rs-home">
                   </i>
                   <span class="ms-3">Dashboard</span>
                </a>
             </li>
             <li>
-               <a href="#" class="flex items-center p-2 text-black rounded-lg hover:bg-red-700 hover:text-white group">
+               <a href="/komunitas/komunitas.html" class="flex items-center p-2 text-black rounded-lg hover:bg-red-700 hover:text-white group">
                   <i class="fi fi-rs-users-alt"></i>
                   <span class="flex-1 ms-3 whitespace-nowrap">Community</span>
                </a>
             </li>
             <li>
-               <a href="#" class="flex items-center p-2 text-black rounded-lg hover:bg-red-700 hover:text-white group">
+               <a href="/fields/fields.html" class="flex items-center p-2 text-black rounded-lg hover:bg-red-700 hover:text-white group">
                   <i class="fi fi-rs-court-sport">
                   </i>
                   <span class="flex-1 ms-3 whitespace-nowrap">Field</span>
                </a>
             </li>
             <li>
-               <a href="#" class="flex items-center p-2 text-black rounded-lg hover:bg-red-700 hover:text-white group">
+               <a href="/rewards/" class="flex items-center p-2 text-black rounded-lg hover:bg-red-700 hover:text-white group">
                   <i class="fi fi-rs-trophy-star"></i>
                   </i>
                   <span class="flex-1 ms-3 whitespace-nowrap">Reward</span>
                </a>
             </li>
             <li>
-               <a href="#" class="flex items-center p-2 text-black rounded-lg hover:bg-red-700 hover:text-white group">
+               <a href="/sports-group/sports-group.html" class="flex items-center p-2 text-black rounded-lg hover:bg-red-700 hover:text-white group">
                   <i class="fi fi-rs-two-swords"></i>
                   <span class="flex-1 ms-3 whitespace-nowrap">Sports Group</span>
                </a>
@@ -221,9 +221,9 @@
                   <svg class="w-4 h-4 text-yellow-300 me-1" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="currentColor" viewBox="0 0 22 20">
                      <path d="M20.924 7.625a1.523 1.523 0 0 0-1.238-1.044l-5.051-.734-2.259-4.577a1.534 1.534 0 0 0-2.752 0L7.365 5.847l-5.051.734A1.535 1.535 0 0 0 1.463 9.2l3.656 3.563-.863 5.031a1.532 1.532 0 0 0 2.226 1.616L11 17.033l4.518 2.375a1.534 1.534 0 0 0 2.226-1.617l-.863-5.03L20.537 9.2a1.523 1.523 0 0 0 .387-1.575Z"/>
                   </svg>
-                  <p class="ms-2 text-sm font-bold text-gray-900 dark:text-white">4.95</p>
+                  <p class="ms-2 text-sm font-bold text-gray-900 ">4.95</p>
                   <span class="w-1 h-1 mx-1.5 bg-gray-500 rounded-full dark:bg-gray-400"></span>
-                  <a href="#" class="text-sm font-medium text-gray-900 underline hover:no-underline dark:text-white">73 reviews</a>
+                  <a href="#" class="text-sm font-medium text-gray-900 underline hover:no-underline">73 reviews</a>
                </div>
                <p class="bg-red-700 rounded-md my-4 mr-4 p-2 text-white text-sm text-center font-extrabold">FUTSAL</p>
                </div>
@@ -365,7 +365,6 @@
                   </div>
                </div>
             </div>
-            
          </div>
       </div>
    </main>
