--- a/profile/profile.html
+++ b/profile/profile.html
@@ -167,10 +167,10 @@
         </div>
      </aside>
 
-     <main class="pt-20">
+     <main class="pt-20 pb-20">
         <div class="flex justify-end">
         <!-- Main Content -->
-        <div class="lg:w-4/5 md:w-4/5 p-6">
+        <div class="lg:w-4/5 md:w-4/5 p-4">
             <!-- Your Content Here -->
             <div class="bg-white p-6 rounded-lg shadow-md mb-6">
                <img alt="Profile Picture" class="w-24 h-24 rounded-full" height="100" 
