--- a/fields/fields.html
+++ b/fields/fields.html
@@ -177,71 +177,89 @@
         <div class="lg:w-3/5 md:w-3/5 p-4">
             <div>
                 <h2 class="text-2xl font-bold mb-4">Trending</h2>
-                <div class="grid grid-cols-3 gap-4">
+                <div class="grid grid-cols-4 gap-4">
                   <a href="detail-field.html">
-                    <div class="bg-white p-4 rounded-lg shadow-lg hover:bg-gray-200">
+                     <div class="bg-white p-4 rounded-lg shadow-lg hover:bg-gray-200">
                         <img alt="IFI Futsal" class="rounded-lg mb-4" height="200" src="https://storage.googleapis.com/a1aa/image/XnmMD1RqicJAAJYRB7wGRLnLOeYvxbfddQl7o0fDEXGwkOvnA.jpg" width="300"/>
                         <h3 class="text-xl font-semibold">IFI Futsal</h3>
                         <p>Price: Rp 70.000/Jam</p>
                         <div class="flex items-center space-x-2">
                            <i class="fi fi-rs-marker text-red-600"></i>
-                            <span>Bandung</span>
+                              <span>Bandung</span>
                         </div>
-                    </div>
+                     </div>
                   </a>
-                    <div class="bg-white p-4 rounded-lg shadow-lg">
+                     <div class="bg-white p-4 rounded-lg shadow-lg">
                         <img alt="Basket Center" class="rounded-lg mb-4" height="200" src="https://storage.googleapis.com/a1aa/image/akUXUyA2gQa1J5qOxBCLsNF831iizx2jKaWTbepkzAWRpz7JA.jpg" width="300"/>
                         <h3 class="text-xl font-semibold">Basket Center</h3>
                         <p>Price: 100.000/hours</p>
                         <div class="flex items-center space-x-2">
                            <i class="fi fi-rs-marker text-red-600"></i>
-                            <span>Bekasi</span>
+                              <span>Bekasi</span>
                         </div>
-                    </div>
-                    <div class="bg-white p-4 rounded-lg shadow-lg">
+                     </div>
+                     <div class="bg-white p-4 rounded-lg shadow-lg">
                         <img alt="Gor Spontan" class="rounded-lg mb-4" height="200" src="https://storage.googleapis.com/a1aa/image/i1uTUXXe0DyxX6cDNLr548UQIopjCfQN68rwQHBORfLHlOvnA.jpg" width="300"/>
                         <h3 class="text-xl font-semibold">Gor Spontan</h3>
                         <p>Price: 50.000/hours</p>
                         <div class="flex items-center space-x-2">
                            <i class="fi fi-rs-marker text-red-600"></i>
-                            <span>Jakarta</span>
+                              <span>Jakarta</span>
                         </div>
-                    </div>
+                     </div>
+                     <div class="bg-white p-4 rounded-lg shadow-lg">
+                        <img alt="Gor Spontan" class="rounded-lg mb-4" height="200" src="https://storage.googleapis.com/a1aa/image/i1uTUXXe0DyxX6cDNLr548UQIopjCfQN68rwQHBORfLHlOvnA.jpg" width="300"/>
+                        <h3 class="text-xl font-semibold">Gor Spontan</h3>
+                        <p>Price: 50.000/hours</p>
+                        <div class="flex items-center space-x-2">
+                           <i class="fi fi-rs-marker text-red-600"></i>
+                              <span>Jakarta</span>
+                        </div>
+                     </div>
                 </div>
             </div>
 
             <!-- Recommended For You Section -->
-            <div class="mt-8">
-                <h2 class="text-2xl font-bold mb-4">Recommended For You</h2>
-                <div class="grid grid-cols-3 gap-4">
-                    <div class="bg-white p-4 rounded-lg shadow-lg">
-                        <img alt="Rajawali Futsal" class="rounded-lg mb-4" height="200" src="https://storage.googleapis.com/a1aa/image/khwf9OkDd0S5Ti2taKacfJfL0H9e0L5t9DteEJthMfHlm059E.jpg" width="300"/>
-                        <h3 class="text-xl font-semibold">Rajawali Futsal</h3>
-                        <p>Price: 100.000</p>
-                        <div class="flex items-center space-x-2">
-                           <i class="fi fi-rs-marker text-red-600"></i>
-                            <span>Bandung</span>
-                        </div>
-                    </div>
-                    <div class="bg-white p-4 rounded-lg shadow-lg">
-                        <img alt="Lapang Telkom" class="rounded-lg mb-4" height="200" src="https://storage.googleapis.com/a1aa/image/7plmfOCUDw17WK1Z83Wi14AI8x1JEX0VF9o4dKWr8AFQpz7JA.jpg" width="300"/>
-                        <h3 class="text-xl font-semibold">Lapang Telkom</h3>
-                        <p>Price: Free</p>
-                        <div class="flex items-center space-x-2">
-                           <i class="fi fi-rs-marker text-red-600"></i>
-                            <span>Bandung</span>
-                        </div>
-                    </div>
-                    <div class="bg-white p-4 rounded-lg shadow-lg">
-                        <img alt="Gym Majapahit" class="rounded-lg mb-4" height="200" src="https://storage.googleapis.com/a1aa/image/MUz5PT0MwyJUNp52sr6isHZZe9NWv3kq7lFi7voQDFWKpz7JA.jpg" width="300"/>
-                        <h3 class="text-xl font-semibold">Gym Majapahit</h3>
-                        <p>Price: 30.000</p>
-                        <div class="flex items-center space-x-2">
-                           <i class="fi fi-rs-marker text-red-600"></i>
-                            <span>Bandung</span>
-                        </div>
-                    </div>
-                </div>
+            <div class="mt-4">
+               <h2 class="text-2xl font-bold mb-4">Recommended For You</h2>
+               <div class="grid grid-cols-4 gap-4">
+                  <div class="bg-white p-4 rounded-lg shadow-lg">
+                     <img alt="Rajawali Futsal" class="rounded-lg mb-4" height="200" src="https://storage.googleapis.com/a1aa/image/khwf9OkDd0S5Ti2taKacfJfL0H9e0L5t9DteEJthMfHlm059E.jpg" width="300"/>
+                     <h3 class="text-xl font-semibold">Rajawali Futsal</h3>
+                     <p>Price: 100.000</p>
+                     <div class="flex items-center space-x-2">
+                        <i class="fi fi-rs-marker text-red-600"></i>
+                           <span>Bandung</span>
+                     </div>
+                  </div>
+                  <div class="bg-white p-4 rounded-lg shadow-lg">
+                     <img alt="Lapang Telkom" class="rounded-lg mb-4" height="200" src="https://storage.googleapis.com/a1aa/image/7plmfOCUDw17WK1Z83Wi14AI8x1JEX0VF9o4dKWr8AFQpz7JA.jpg" width="300"/>
+                     <h3 class="text-xl font-semibold">Lapang Telkom</h3>
+                     <p>Price: Free</p>
+                     <div class="flex items-center space-x-2">
+                        <i class="fi fi-rs-marker text-red-600"></i>
+                           <span>Bandung</span>
+                     </div>
+                  </div>
+                  <div class="bg-white p-4 rounded-lg shadow-lg">
+                     <img alt="Gym Majapahit" class="rounded-lg mb-4" height="200" src="https://storage.googleapis.com/a1aa/image/MUz5PT0MwyJUNp52sr6isHZZe9NWv3kq7lFi7voQDFWKpz7JA.jpg" width="300"/>
+                     <h3 class="text-xl font-semibold">Gym Majapahit</h3>
+                     <p>Price: 30.000</p>
+                     <div class="flex items-center space-x-2">
+                        <i class="fi fi-rs-marker text-red-600"></i>
+                           <span>Bandung</span>
+                     </div>
+                  </div>
+                  <div class="bg-white p-4 rounded-lg shadow-lg">
+                     <img alt="Gym Majapahit" class="rounded-lg mb-4" height="200" src="https://storage.googleapis.com/a1aa/image/MUz5PT0MwyJUNp52sr6isHZZe9NWv3kq7lFi7voQDFWKpz7JA.jpg" width="300"/>
+                     <h3 class="text-xl font-semibold">Gym Majapahit</h3>
+                     <p>Price: 30.000</p>
+                     <div class="flex items-center space-x-2">
+                        <i class="fi fi-rs-marker text-red-600"></i>
+                           <span>Bandung</span>
+                     </div>
+                  </div>
+               </div>
             </div>
         </div>
 
