--- a/komunitas/komunitas.html
+++ b/komunitas/komunitas.html
@@ -176,12 +176,12 @@
             <h2 class="text-2xl font-bold text-red-700 mb-2">Preferred Community</h2>
             <div class="grid grid-cols-4 gap-1 overflow-x">
               <!-- Card -->
+              <a href="detailKomunitas.html">
               <div class="bg-white shadow-lg rounded-lg p-4 m-1 w-100 hover:bg-gray-300"  >
                 <img src="../asset login/img/futsal2-bg.jpg" alt="Basket Majalaya" class="rounded-lg mb-3 w-full h-auto">
                 <h4 class="font-bold text-md">Eagel Futsal</h4>
                 <div class="flex items-center text-sm text-gray-600">
                   <span>Futsal</span>
-                  
                 </div>
                 <p class="text-sm text-gray-500">Jakarta</p>
                 <div class="flex justify-between items-center mt-2 text-sm text-gray-600">
@@ -189,6 +189,7 @@
                   <i class="fas fa-user"></i>
                 </div>
               </div>
+            </a>
               <div class="bg-white shadow-lg rounded-lg p-4 m-1 w-100 hover:bg-gray-300" >
                 <img src="../asset login/img/basket-bg.png" alt="Basket Majalaya" class="rounded-lg mb-3 w-full h-auto">
                 <h4 class="font-bold text-md">Jungle King </h4>
