--- a/komunitas/detailKomunitas.html
+++ b/komunitas/detailKomunitas.html
@@ -119,7 +119,7 @@
       <div class="h-full px-3 pb-4 overflow-y-auto bg-white">
          <ul class="space-y-2 font-medium">
             <li>
-               <a href="#" class="flex items-center p-2 text-black rounded-lg hover:bg-red-700 hover:text-white group">
+               <a href="/dashboard/dashboard.html" class="flex items-center p-2 text-black rounded-lg hover:bg-red-700 hover:text-white group">
                   <i class="fi fi-rs-home">
                   </i>
                   <span class="ms-3">Dashboard</span>
@@ -163,12 +163,12 @@
    </aside>
    
    </div>
-   <main class="pt-20">
+   <main class="pt-20 pb-20">
       <div class="flex justify-end">
          <!-- Main Content -->
-         <div class="lg:w-3/5 md:w-3/5 p-4 ">  
+         <div class="lg:w-3/5 md:w-3/5 pb-4">  
             <!-- Container Utama -->
-            <div class="max-w-5xl mx-auto bg-white shadow-lg rounded-lg overflow-hidden mt-8">
+            <div class="max-w-5xl mx-auto bg-white shadow-lg rounded-lg overflow-hidden mt-4">
                 <!-- Gambar Header -->
                 <div class="relative">
                     <img src="../asset login/img/futsal3-bg.jpg" class="w-full h-32 object-cover">
