--- a/komunitas/detailKomunitas.html
+++ b/komunitas/detailKomunitas.html
@@ -115,7 +115,7 @@
       </div>
    </nav>
    
-   <aside id="logo-sidebar" class="fixed top-0 left-0 z-40 w-64 h-screen pt-20 transition-transform -translate-x-full bg-white border-r sm:translate-x-0" aria-label="Sidebar">
+   <aside id="logo-sidebar" class="fixed top-0 left-6 z-40 w-64 h-[87vh] pt-20 transition-transform -translate-x-full bg-white border-r sm:translate-x-0" aria-label="Sidebar">
       <div class="h-full px-3 pb-4 overflow-y-auto bg-white">
          <ul class="space-y-2 font-medium">
             <li>
@@ -168,7 +168,7 @@
          <!-- Main Content -->
          <div class="lg:w-3/5 md:w-3/5 pb-4">  
             <!-- Container Utama -->
-            <div class="max-w-5xl mx-auto bg-white shadow-lg rounded-lg overflow-hidden mt-4">
+            <div class="max-w-4xl mx-auto bg-white shadow-lg rounded-lg overflow-hidden mt-4">
                 <!-- Gambar Header -->
                 <div class="relative">
                     <img src="../asset login/img/futsal3-bg.jpg" class="w-full h-32 object-cover">
@@ -200,11 +200,11 @@
 
                 <div id="About-community" class="tab-content bg-white p-6 rounded-b-lg shadow-md">
                     <div class="p-6">
-                        <h3 class="text-lg font-semibold text-gray-800 mb-2">Semangat Tanpa Batas, Prestasi Tanpa Akhir</h3>
-                        <p class="text-gray-700 leading-relaxed">
+                        <h3 class="text-lg font-semibold text-grey-800 mb-2">Semangat Tanpa Batas, Prestasi Tanpa Akhir</h3>
+                        <p class="text-gray-700 text-sm leading-relaxed">
                             Selamat datang di komunitas basket kami, sebuah keluarga besar yang dipersatukan oleh cinta dan dedikasi terhadap olahraga bola basket. Kami percaya bahwa basket lebih dari sekadar permainan; ini adalah wadah untuk mengekspresikan diri, mengembangkan karakter, dan membangun persahabatan yang erat.
                         </p>
-                        <p class="text-gray-700 mt-4 leading-relaxed">
+                        <p class="text-gray-700 mt-4  text-sm  leading-relaxed">
                             Di komunitas kami, setiap anggota, dari yang pemula hingga yang berpengalaman, diperlakukan dengan rasa hormat dan diberi kesempatan yang sama untuk berkembang. Kami menyediakan program latihan yang dirancang untuk meningkatkan keterampilan individu serta strategi tim. Dengan bimbingan pelatih profesional dan berpengalaman, kami memastikan bahwa setiap sesi latihan tidak hanya efektif, tetapi juga menyenangkan dan menginspirasi.
                         </p>
                     </div>
