--- a/fields/detail-field.html
+++ b/fields/detail-field.html
@@ -119,7 +119,7 @@
       </div>
    </nav>
    
-   <aside id="logo-sidebar" class="fixed top-0 left-0 z-40 w-64 h-screen pt-20 transition-transform -translate-x-full bg-white border-r sm:translate-x-0" aria-label="Sidebar">
+   <aside id="logo-sidebar" class="fixed top-0 left-6 z-40 w-64 h-[87vh] pt-20 transition-transform -translate-x-full bg-white border-r sm:translate-x-0" aria-label="Sidebar">
       <div class="h-full px-3 pb-4 overflow-y-auto bg-white">
          <ul class="space-y-2 font-medium">
             <li>
@@ -167,10 +167,10 @@
    </aside>
    
    </div>
-   <main class="pt-20">
+   <main class="pt-20 pb-20">
       <div class="flex justify-end">
          <!-- Main Content -->
-         <div class="lg:w-3/5 md:w-3/5 p-4 ">  
+         <div class="lg:w-3/5 sm:w-3/5 p-4">  
             <div class="bg-white p-4 rounded-lg shadow mb-4 flex items-center space-x-40">
                <i class="fa-solid fa-xmark fa-xl" style="color: #D60505;"></i>
                <h2 class=" text-2xl font-bold text-red-700 mb-2">Futsal Yogya Bojongsoang</h2>
