--- a/komunitas/komunitas.html
+++ b/komunitas/komunitas.html
@@ -78,7 +78,7 @@
                   </ul>
                </div>
             </div>
-            <button data-modal-target="logout-modal" data-modal-toggle="logout-modal" class="text-red-900 hover:bg-red-600 hover:text-white font-medium rounded-full text-sm ml-2 px-5 py-2.5 text-center" type="button">
+            <button data-modal-target="logout-modal" data-modal-toggle="logout-modal" class="text-red-900 hover:bg-red-600 hover:text-white font-medium rounded-lg text-sm ml-2 px-5 py-2.5 text-center" type="button">
                Log Out
             </button>
 
@@ -203,7 +203,7 @@
          <!-- Main Content -->
          <div class="lg:w-3/5 md:w-3/5 p-4">  
             <h2 class="text-2xl font-bold text-red-700 mb-2">Preferred Community</h2>
-            <div class="grid grid-cols-4 gap-4 overflow-x">
+            <div class="grid grid-cols-4 gap-6 overflow-x">
               <!-- Card -->
               <a href="detailKomunitas.html">
               <div class="bg-white shadow-lg rounded-lg p-4 m-1 w-100 hover:bg-gray-300"  >
@@ -218,13 +218,12 @@
                   <i class="fas fa-user"></i>
                 </div>
               </div>
-            </a>
+               </a>
               <div class="bg-white shadow-lg rounded-lg p-4 m-1 w-100 hover:bg-gray-300" >
                 <img src="../asset login/img/basket-bg.png" alt="Basket Majalaya" class="rounded-lg mb-3 w-full h-auto">
                 <h4 class="font-bold text-md">Jungle King </h4>
                 <div class="flex items-center text-sm text-gray-600">
                   <span>Basket</span>
-                  
                 </div>
                 <p class="text-sm text-gray-500">Bandung</p>
                 <div class="flex justify-between items-center mt-2 text-sm text-gray-600">
@@ -232,6 +231,18 @@
                   <i class="fas fa-user"></i>
                 </div>
               </div>
+              <div class="bg-white shadow-lg rounded-lg p-4 m-1 w-100 hover:bg-gray-300" >
+               <img src="../asset login/img/basket-bg.png" alt="Basket Majalaya" class="rounded-lg mb-3 w-full h-auto">
+               <h4 class="font-bold text-md">Jungle King </h4>
+               <div class="flex items-center text-sm text-gray-600">
+                 <span>Basket</span>
+               </div>
+               <p class="text-sm text-gray-500">Bandung</p>
+               <div class="flex justify-between items-center mt-2 text-sm text-gray-600">
+                 <p>11/25</p>
+                 <i class="fas fa-user"></i>
+               </div>
+             </div>
               <div class="bg-white shadow-lg rounded-lg p-4 m-1 w-100 hover:bg-gray-300" >
                 <img src="../asset login/img/badminton-bg.png" alt="Basket Majalaya" class="rounded-lg mb-3 w-full h-auto">
                 <h4 class="font-bold text-md">Badminton Kuy</h4>
