--- a/komunitas/addKomunitas.html
+++ b/komunitas/addKomunitas.html
@@ -131,9 +131,15 @@
                </a>
             </li>
             <li>
-               <a href="/komunitas/addKomunitas.html" class="flex items-center p-2 text-black rounded-lg hover:bg-red-700 hover:text-white group">
+               <a href="/komunitas/addKomunitas.html" class="flex items-center p-2 text-white bg-red-700 rounded-lg hover:bg-red-700 hover:text-white group">
                   <i class="fi fi-rs-users-alt"></i>
                   <span class="flex-1 ms-3 whitespace-nowrap">Add Community</span>
+               </a>
+            </li>
+            <li>
+               <a href="../komunitas/myKomunitas.html" class="flex items-center p-2 text-black rounded-lg hover:bg-red-700 hover:text-white group">
+                  <i class="fi fi-rs-users-alt"></i>
+                  <span class="flex-1 ms-3 whitespace-nowrap">My Community</span>
                </a>
             </li>
             <li>
@@ -144,7 +150,7 @@
                </a>
             </li>
             <li>
-               <a href="#" class="flex items-center p-2 text-black rounded-lg hover:bg-red-700 hover:text-white group">
+               <a href="/rewards/rewards.html" class="flex items-center p-2 text-black rounded-lg hover:bg-red-700 hover:text-white group">
                   <i class="fi fi-rs-trophy-star"></i>
                   </i>
                   <span class="flex-1 ms-3 whitespace-nowrap">Reward</span>
