--- a/komunitas/detailKomunitas.html
+++ b/komunitas/detailKomunitas.html
@@ -119,34 +119,46 @@
       <div class="h-full px-3 pb-4 overflow-y-auto bg-white">
          <ul class="space-y-2 font-medium">
             <li>
-               <a href="#" class="flex items-center p-2 text-black rounded-lg hover:bg-red-700 hover:text-white group">
+               <a href="../dashboard/dashboard.html" class="flex items-center p-2 text-black rounded-lg hover:bg-red-700 hover:text-white group">
                   <i class="fi fi-rs-home">
                   </i>
                   <span class="ms-3">Dashboard</span>
                </a>
             </li>
             <li>
-               <a href="#" class="flex items-center p-2 text-black rounded-lg hover:bg-red-700 hover:text-white group">
+               <a href="../komunitas/komunitas.html" class="flex items-center p-2 text-white bg-red-700 rounded-lg hover:bg-red-700 hover:text-white group">
                   <i class="fi fi-rs-users-alt"></i>
                   <span class="flex-1 ms-3 whitespace-nowrap">Community</span>
                </a>
             </li>
             <li>
-               <a href="#" class="flex items-center p-2 text-black rounded-lg hover:bg-red-700 hover:text-white group">
+               <a href="/komunitas/addKomunitas.html" class="flex items-center p-2 text-black rounded-lg hover:bg-red-700 hover:text-white group">
+                  <i class="fi fi-rs-users-alt"></i>
+                  <span class="flex-1 ms-3 whitespace-nowrap">Add Community</span>
+               </a>
+            </li>
+            <li>
+               <a href="../komunitas/myKomunitas.html" class="flex items-center p-2 text-black rounded-lg hover:bg-red-700 hover:text-white group">
+                  <i class="fi fi-rs-users-alt"></i>
+                  <span class="flex-1 ms-3 whitespace-nowrap">My Community</span>
+               </a>
+            </li>
+            <li>
+               <a href="../fields/fields.html" class="flex items-center p-2 text-black rounded-lg hover:bg-red-700 hover:text-white group">
                   <i class="fi fi-rs-court-sport">
                   </i>
                   <span class="flex-1 ms-3 whitespace-nowrap">Field</span>
                </a>
             </li>
             <li>
-               <a href="#" class="flex items-center p-2 text-black rounded-lg hover:bg-red-700 hover:text-white group">
+               <a href="/rewards/rewards.html" class="flex items-center p-2 text-black rounded-lg hover:bg-red-700 hover:text-white group">
                   <i class="fi fi-rs-trophy-star"></i>
                   </i>
                   <span class="flex-1 ms-3 whitespace-nowrap">Reward</span>
                </a>
             </li>
             <li>
-               <a href="#" class="flex items-center p-2 text-black rounded-lg hover:bg-red-700 hover:text-white group">
+               <a href="../sports-group/sports-group.html" class="flex items-center p-2 text-black rounded-lg hover:bg-red-700 hover:text-white group">
                   <i class="fi fi-rs-two-swords"></i>
                   <span class="flex-1 ms-3 whitespace-nowrap">Sports Group</span>
                </a>
@@ -168,15 +180,15 @@
          <!-- Main Content -->
          <div class="lg:w-3/5 md:w-3/5 p-4 ">  
             <!-- Container Utama -->
-            <div class="max-w-5xl mx-auto bg-white shadow-lg rounded-lg overflow-hidden mt-8">
+            <div class="max-w-5xl mx-auto bg-white rounded-lg overflow-hidden mt-8">
                 <!-- Gambar Header -->
                 <div class="relative">
-                    <img src="../asset login/img/futsal3-bg.jpg" class="w-full h-32 object-cover">
+                    <img src="../asset login/img/background1.jpg" class="w-full h-32 object-cover">
                 </div>
 
                 <!-- Bagian Profil Komunitas -->
                 <div class="flex items-center justify-center -mt-12">
-                    <img src="../asset login/img/futsal-bg.jpg" alt="Basketball Icon" class="w-32 h-32 rounded-full border-4 border-white shadow-md z-10">
+                    <img src="../asset login/img/basket-bg.png" alt="Basketball Icon" class="w-32 h-32 rounded-full border-4 border-gray-300 shadow-md z-10">
                 </div>
 
                 <!-- Informasi Komunitas -->
@@ -198,13 +210,13 @@
                     </div>
                 </div>
 
-                <div id="About-community" class="tab-content bg-white p-6 rounded-b-lg shadow-md">
+                <div id="About-community" class="tab-content bg-white p-6 rounded-b-lg">
                     <div class="p-6">
                         <h3 class="text-lg font-semibold text-gray-800 mb-2">Semangat Tanpa Batas, Prestasi Tanpa Akhir</h3>
-                        <p class="text-gray-700 leading-relaxed">
+                        <p class="text-gray-700 leading-relaxed text-sm">
                             Selamat datang di komunitas basket kami, sebuah keluarga besar yang dipersatukan oleh cinta dan dedikasi terhadap olahraga bola basket. Kami percaya bahwa basket lebih dari sekadar permainan; ini adalah wadah untuk mengekspresikan diri, mengembangkan karakter, dan membangun persahabatan yang erat.
                         </p>
-                        <p class="text-gray-700 mt-4 leading-relaxed">
+                        <p class="text-gray-700 mt-4 leading-relaxed text-sm">
                             Di komunitas kami, setiap anggota, dari yang pemula hingga yang berpengalaman, diperlakukan dengan rasa hormat dan diberi kesempatan yang sama untuk berkembang. Kami menyediakan program latihan yang dirancang untuk meningkatkan keterampilan individu serta strategi tim. Dengan bimbingan pelatih profesional dan berpengalaman, kami memastikan bahwa setiap sesi latihan tidak hanya efektif, tetapi juga menyenangkan dan menginspirasi.
                         </p>
                     </div>
