--- a/komunitas/detailKomunitas.html
+++ b/komunitas/detailKomunitas.html
@@ -119,11 +119,7 @@
       <div class="h-full px-3 pb-4 overflow-y-auto bg-white">
          <ul class="space-y-2 font-medium">
             <li>
-<<<<<<< HEAD
-               <a href="../dashboard/dashboard.html" class="flex items-center p-2 text-black rounded-lg hover:bg-red-700 hover:text-white group">
-=======
                <a href="/dashboard/dashboard.html" class="flex items-center p-2 text-black rounded-lg hover:bg-red-700 hover:text-white group">
->>>>>>> f37559f5230700740a0ba216e15a38c933106c74
                   <i class="fi fi-rs-home">
                   </i>
                   <span class="ms-3">Dashboard</span>
@@ -184,11 +180,8 @@
          <!-- Main Content -->
          <div class="lg:w-3/5 md:w-3/5 pb-4">  
             <!-- Container Utama -->
-<<<<<<< HEAD
             <div class="max-w-5xl mx-auto bg-white rounded-lg overflow-hidden mt-8">
-=======
-            <div class="max-w-4xl mx-auto bg-white shadow-lg rounded-lg overflow-hidden mt-4">
->>>>>>> f37559f5230700740a0ba216e15a38c933106c74
+            <!-- <div class="max-w-4xl mx-auto bg-white shadow-lg rounded-lg overflow-hidden mt-4"> -->
                 <!-- Gambar Header -->
                 <div class="relative">
                     <img src="../asset login/img/background1.jpg" class="w-full h-32 object-cover">
@@ -220,19 +213,11 @@
 
                 <div id="About-community" class="tab-content bg-white p-6 rounded-b-lg">
                     <div class="p-6">
-<<<<<<< HEAD
                         <h3 class="text-lg font-semibold text-gray-800 mb-2">Semangat Tanpa Batas, Prestasi Tanpa Akhir</h3>
                         <p class="text-gray-700 leading-relaxed text-sm">
                             Selamat datang di komunitas basket kami, sebuah keluarga besar yang dipersatukan oleh cinta dan dedikasi terhadap olahraga bola basket. Kami percaya bahwa basket lebih dari sekadar permainan; ini adalah wadah untuk mengekspresikan diri, mengembangkan karakter, dan membangun persahabatan yang erat.
                         </p>
                         <p class="text-gray-700 mt-4 leading-relaxed text-sm">
-=======
-                        <h3 class="text-lg font-semibold text-grey-800 mb-2">Semangat Tanpa Batas, Prestasi Tanpa Akhir</h3>
-                        <p class="text-gray-700 text-sm leading-relaxed">
-                            Selamat datang di komunitas basket kami, sebuah keluarga besar yang dipersatukan oleh cinta dan dedikasi terhadap olahraga bola basket. Kami percaya bahwa basket lebih dari sekadar permainan; ini adalah wadah untuk mengekspresikan diri, mengembangkan karakter, dan membangun persahabatan yang erat.
-                        </p>
-                        <p class="text-gray-700 mt-4  text-sm  leading-relaxed">
->>>>>>> f37559f5230700740a0ba216e15a38c933106c74
                             Di komunitas kami, setiap anggota, dari yang pemula hingga yang berpengalaman, diperlakukan dengan rasa hormat dan diberi kesempatan yang sama untuk berkembang. Kami menyediakan program latihan yang dirancang untuk meningkatkan keterampilan individu serta strategi tim. Dengan bimbingan pelatih profesional dan berpengalaman, kami memastikan bahwa setiap sesi latihan tidak hanya efektif, tetapi juga menyenangkan dan menginspirasi.
                         </p>
                     </div>
