--- a/sports-group/sports-group.html
+++ b/sports-group/sports-group.html
@@ -275,7 +275,8 @@
             <div class="bg-white p-4 rounded-lg shadow mb-4">
                   <h1 class="text-center font-extrabold text-xl text-red-700 mb-6">SPORTS GROUP</h1>
                 <div class="grid grid-cols-3 gap-8">
-                    <div class="my-2 p-2 bg-gray-100 relative rounded-lg shadow">
+                     <a href="/sports-group/detail-sportsgroup.html">
+                    <div class="my-2 p-2 bg-gray-100 relative rounded-lg shadow ">
                         <div class=" p-2 bg-red-700  rounded-md absolute -right-3 -top-3  ">
                            <i class="fa-solid fa-volleyball" style="color:white"></i>
                         </div>
@@ -303,6 +304,7 @@
                            </div>
                         </div>
                     </div>
+                    </a>
                     <div class="my-2 p-2 bg-gray-100 relative rounded-lg shadow">
                         <div class=" p-2 bg-red-700  rounded-md absolute -right-3 -top-3  ">
                            <i class="fa-solid fa-basketball" style="color:white"></i>
